k8s/namespace.yml
apiVersion: v1
kind: Namespace

metadata:
  name: chat-app
  labels:
    app: chat-app
